--- a/app/globals.css
+++ b/app/globals.css
@@ -19,3 +19,19 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+.info-section {
+  width: 30%;
+  background-color: #ffffff;
+  padding: 20px;
+  margin: 15px 0;
+  border: 1px solid #e6e6e6;
+  border-radius: 8px;
+  text-align: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.info-section:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+}
