--- a/components/ZigZagContainer/ZigzagContainers.css
+++ b/components/ZigZagContainer/ZigzagContainers.css
@@ -2,7 +2,8 @@
 
 .info-block-container {
     padding: 60px 100px;
-    background-color: #f9f9f9;
+    /* background-color: #f9f9f9; */
+    background-color: aliceblue;
     text-align: center;
 }
 
@@ -58,6 +59,9 @@
     font-size: 2rem;
     margin-bottom: 10px;
     color: #e63946;
+}
+.info-section a{
+    color:#000000
 }
 
 @media (max-width: 768px) {
